--- a/AdressListWithSwift3/Controller/My/Setting/ModifyPasswordController.xib
+++ b/AdressListWithSwift3/Controller/My/Setting/ModifyPasswordController.xib
@@ -18,6 +18,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="my_bg" translatesAutoresizingMaskIntoConstraints="NO" id="K7E-9O-izV"/>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nSb-JW-M7x" userLabel="oldV">
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="旧密码：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vac-SC-25t">
@@ -31,7 +32,7 @@
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstItem="9cg-Ks-fTP" firstAttribute="leading" secondItem="vac-SC-25t" secondAttribute="trailing" constant="10" id="AFx-oH-wT4"/>
                         <constraint firstItem="vac-SC-25t" firstAttribute="leading" secondItem="nSb-JW-M7x" secondAttribute="leading" constant="24" id="NBZ-9c-Tx3"/>
@@ -54,7 +55,7 @@
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstItem="C31-bm-IqB" firstAttribute="leading" secondItem="2vV-6h-60R" secondAttribute="leading" constant="24" id="BI3-wL-hJz"/>
                         <constraint firstItem="C31-bm-IqB" firstAttribute="centerY" secondItem="2vV-6h-60R" secondAttribute="centerY" id="eCd-Ug-C5H"/>
@@ -71,9 +72,16 @@
                 <constraint firstAttribute="trailing" secondItem="nSb-JW-M7x" secondAttribute="trailing" id="2ji-8H-FTZ"/>
                 <constraint firstItem="2vV-6h-60R" firstAttribute="centerX" secondItem="nSb-JW-M7x" secondAttribute="centerX" id="6SO-qv-m3d"/>
                 <constraint firstItem="nSb-JW-M7x" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Agh-Ze-42F"/>
+                <constraint firstAttribute="trailing" secondItem="K7E-9O-izV" secondAttribute="trailing" id="W0F-vf-K6n"/>
+                <constraint firstAttribute="bottom" secondItem="K7E-9O-izV" secondAttribute="bottom" id="ZEO-1c-9vp"/>
                 <constraint firstItem="2vV-6h-60R" firstAttribute="top" secondItem="nSb-JW-M7x" secondAttribute="bottom" constant="20" id="bhI-Za-ECn"/>
                 <constraint firstItem="2vV-6h-60R" firstAttribute="width" secondItem="nSb-JW-M7x" secondAttribute="width" id="tYU-2h-8Od"/>
+                <constraint firstItem="K7E-9O-izV" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="tar-7H-7pP"/>
+                <constraint firstItem="K7E-9O-izV" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="vvM-OV-to3"/>
             </constraints>
         </view>
     </objects>
+    <resources>
+        <image name="my_bg" width="700" height="980"/>
+    </resources>
 </document>
