--- a/AdressListWithSwift3/Controller/My/MyInfo/MyInfoController.xib
+++ b/AdressListWithSwift3/Controller/My/MyInfo/MyInfoController.xib
@@ -23,6 +23,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="my_bg" translatesAutoresizingMaskIntoConstraints="NO" id="XUJ-2C-zxR"/>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qF6-Rj-wcb">
                     <subviews>
                         <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bZt-W1-yhn" userLabel="imgV">
@@ -45,7 +46,7 @@
                                     <state key="normal" image="indicator_gray"/>
                                 </button>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstItem="cOQ-I0-oTI" firstAttribute="centerY" secondItem="bZt-W1-yhn" secondAttribute="centerY" id="0Ww-kw-Sg9"/>
                                 <constraint firstAttribute="trailing" secondItem="cOQ-I0-oTI" secondAttribute="trailing" constant="24" id="2A5-9J-Szz"/>
@@ -80,7 +81,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstItem="Zgd-3q-Wys" firstAttribute="centerY" secondItem="5EX-WU-bDD" secondAttribute="centerY" id="0Tm-Kf-OvU"/>
                                 <constraint firstItem="Zgd-3q-Wys" firstAttribute="leading" secondItem="5EX-WU-bDD" secondAttribute="trailing" constant="10" id="7kt-mH-I2p"/>
@@ -113,7 +114,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstItem="ytb-IT-wif" firstAttribute="centerY" secondItem="pjR-O7-ciZ" secondAttribute="centerY" id="PRJ-KN-mEl"/>
                                 <constraint firstItem="TNv-U8-mpH" firstAttribute="centerY" secondItem="pjR-O7-ciZ" secondAttribute="centerY" id="TYQ-bO-iUP"/>
@@ -146,7 +147,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstItem="4Rl-h0-bYu" firstAttribute="centerY" secondItem="bhe-fb-K4d" secondAttribute="centerY" id="JYg-jy-lSJ"/>
                                 <constraint firstItem="bhe-fb-K4d" firstAttribute="centerY" secondItem="Kfi-eV-wgB" secondAttribute="centerY" id="TUn-NH-Gd1"/>
@@ -179,7 +180,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstItem="f6x-kX-GWp" firstAttribute="leading" secondItem="paf-4U-IdF" secondAttribute="leading" constant="24" id="09g-2c-kse"/>
                                 <constraint firstItem="94d-ge-sQj" firstAttribute="leading" secondItem="yKy-cU-nb8" secondAttribute="trailing" constant="10" id="Eu3-J3-Zfl"/>
@@ -221,9 +222,13 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="qF6-Rj-wcb" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="482-MU-YRs"/>
+                <constraint firstItem="XUJ-2C-zxR" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="IBY-s7-PBy"/>
+                <constraint firstAttribute="bottom" secondItem="XUJ-2C-zxR" secondAttribute="bottom" id="Jba-Eu-uA2"/>
                 <constraint firstItem="qF6-Rj-wcb" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="PWk-xB-9ju"/>
                 <constraint firstAttribute="trailing" secondItem="qF6-Rj-wcb" secondAttribute="trailing" id="Siy-gs-bMN"/>
+                <constraint firstAttribute="trailing" secondItem="XUJ-2C-zxR" secondAttribute="trailing" id="ck4-sK-lb6"/>
                 <constraint firstAttribute="bottom" secondItem="qF6-Rj-wcb" secondAttribute="bottom" id="j1D-1i-DVe"/>
+                <constraint firstItem="XUJ-2C-zxR" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="u66-RF-lR1"/>
             </constraints>
         </view>
         <tapGestureRecognizer id="BxE-ZS-vQT" userLabel="headImgTap">
@@ -255,5 +260,6 @@
     <resources>
         <image name="head" width="87" height="87"/>
         <image name="indicator_gray" width="18" height="25"/>
+        <image name="my_bg" width="700" height="980"/>
     </resources>
 </document>
